--- a/style/style.css
+++ b/style/style.css
@@ -1,37 +1,37 @@
-* {
+html, body {
+    width: 50%;
+    margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+    width: 420px;
+}
+
+#input-field {
+    width: 360px;
+    height: 46px;
+    border: 1px solid black;
+    outline: none;
+    font-size: 25px;
+    vertical-align: middle;
+}
+
+#add-to-do {
+    height:50px;
+    width: 50px;
+    border: 1px solid black;
+    vertical-align: middle;
+    font-size: 30px;
+}
+
+.to-dos {
+    margin: 25px;
+}
+
+.paragraph-styling {
     margin: 0;
-    padding: 0;
-}
+    cursor: pointer;
+    font-size: 20px;
 
-body {
-    background-color: rgb(5, 5, 5);
-    color: blanchedalmond;
-    width: 1530px;
-    height: 760px;
-
-}
-
-form{
-    padding: 20px;
-}
-
-.to-do-things {
-    width: 300px;
-}
-
-li {
-    list-style: none;
-}
-
-.to-do-list, .to-do-things {
-    margin-left: 40%;
-    margin-top: 3%;
-    display: inline-block;
-    padding: 30px;
-    border: solid 1px rgb(189, 189, 189);
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
 }
